<resources>
    <string name="app_name">MeduRide</string>
    <string name="permission_toast">Please give all permissions otherwise you will not be able to use the app.</string>
    <string name="ok_large">OK</string>
    <string name="enable_gps">Please Enable Your GPS Location</string>
    <string name="enable_large">ENABLE</string>
    <string name="close_large">CLOSE</string>
    <string name="no_internet">Network connection unavailable.Please Check your Internet Connection and try again.</string>
    <string name="login">Login</string>
    <string name="mobile">MOBILE</string>
    <string name="submit">SUBMIT</string>
    <string name="forgot_password">Forgot Password?</string>
    <!--<string name="gcm_defaultSenderId">563857220131</string>
    <string name="fcm_defaultSenderId">943150789019</string>-->
    <string name="please_wait">Please wait..</string>
    <string name="enter_mobile">Please enter mobile number</string>
    <string name="TimeOutError">Unable to reach our servers</string>
    <string name="bookings">Bookings</string>
    <string name="account">Account</string>
    <string name="call_base">Call Base</string>
    <string name="fare_chart">Fare Chart</string>
    <string name="logout">Logout</string>
    <string name="about">About</string>
    <string name="update">Check for Update</string>
    <string name="location">Location..</string>
    <string name="sure_logout">Are you sure,You wanted to logout?</string>
    <string name="yes_large">YES</string>
    <string name="no_large">NO</string>
    <string name="no_connection">No Connection Available</string>
    <string name="booking_request">BOOKING REQUEST</string>
    <string name="have_booking_request">You have a Booking Request :</string>
    <string name="accept_large">ACCEPT</string>
    <string name="cancel_large">CANCEL</string>
    <string name="ambulance_service">Ambulance Service Provider</string>
    <string name="ambulance_type">Ambulance Type</string>
    <string name="small_mobile">Mobile Number</string>
    <string name="small_name">Name</string>
    <string name="save">SAVE</string>
    <string name="no_booking">No bookings for Now</string>
    <string name="success">Success</string>
    <string name="next_hospital">Your booking is still in progress. Go to next hospital.</string>
    <string name="otp_soon">You will get a OTP soon..</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="otp">OTP</string>
    <string name="otp_read">The OTP sent is being automatically read.</string>
    <string name="resend_otp">Taking too much time? Resend OTP</string>
    <string name="please_enter_otp">Please enter OTP</string>
    <string name="invalid_otp">Invalid OTP</string>
    <string name="go_back">Go back?</string>
    <string name="try_again_later">Please try again later..</string>
    <string name="call_user">CALL USER</string>
    <string name="start_ride">START RIDE</string>
    <string name="arrive_driver">ARRIVED</string>
    <string name="stop_ride">STOP RIDE</string>
    <string name="booking_cancelled">BOOKING CANCELLED</string>
    <string name="booking_request_cancelled">Booking Request has been cancelled</string>
    <string name="paid_by_cash">Paid by Cash</string>
    <string name="collect_cash">Collect cash from the User</string>
    <string name="give_permission">Please give permission to call by allowing in App Settings</string>
    <string name="ride_completed">RIDE COMPLETED</string>
    <string name="done">DONE</string>
    <string name="home">Home</string>
    <string name="inactive">INACTIVE</string>
    <string name="active">ACTIVE</string>
    <string name="amount_payable">Amount Payable</string>
    <string name="device_not_supported">Device Not Supported</string>
    <string name="paid_with_paytm">PAID WITH PAYTM</string>
    <string name="amount_paid_with_paytm">Amount has been paid using Patym</string>
    <string name="paid_with_cash">Paid With Cash</string>
    <string name="rate_ride">RATE YOUR RIDE</string>
    <string name="rate_first">Rate First</string>
    <string name="booking_details">Booking Details</string>
    <string name="error">Error!!</string>
    <string name="paying_by_paytm">Paying by Paytm</string>
    <string name="transaction">Is Transaction Done?</string>
    <string name="retry_large">RETRY</string>
    <string name="project_name">LifehoverDriver</string>
    <string name="facebook_app_id">1181442015224315</string>

    <string name="timerVal">00:00:00</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
</resources>
