<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/home"/>
        <item
            android:id="@+id/nav_bookings"
            android:title="@string/bookings" />
        <item
            android:id="@+id/nav_account"
            android:title="@string/account" />
        <item
            android:id="@+id/nav_call_base"
            android:title="@string/call_base" />

        <item
            android:id="@+id/nav_fare_chart"
            android:title="@string/fare_chart" />
        <item
            android:id="@+id/nav_about"
            android:title="@string/about" />
        <item
            android:id="@+id/nav_update"
            android:title="@string/update"/>
        <item
            android:id="@+id/nav_logout"
            android:title="@string/logout" />
    </group>

</menu>