<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/xx_large_margin"
            android:layout_marginRight="@dimen/xx_large_margin"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/xx_dimen_padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/xxxxx_large_margin"
                android:text="@string/enter_otp"
                android:textColor="@color/gray_800"
                android:textSize="@dimen/need_txt_size" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_otp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_input_layout"
                android:theme="@style/TextLabel">

                <EditText
                    android:id="@+id/et_otp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/otp"
                    android:inputType="number"
                    android:singleLine="true"
                    android:textColor="@color/gray_800"
                    android:textSize="@dimen/medium_txt_size" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/large_margin"
                android:text="@string/otp_read"
                android:textColor="@color/gray_800" />

            <TextView
                android:id="@+id/tv_resend_otp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/large_margin"
                android:paddingBottom="@dimen/small_dimen_padding"
                android:paddingTop="@dimen/small_dimen_padding"
                android:text="@string/resend_otp"
                android:textColor="@color/blue"
                android:textSize="@dimen/large_txt_size" />

            <TextView
                android:id="@+id/tv_go_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/small_dimen_padding"
                android:paddingTop="@dimen/small_dimen_padding"
                android:text="@string/go_back"
                android:textColor="@color/blue"
                android:textSize="@dimen/large_txt_size"/>


            <ImageView
                android:id="@+id/iv_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/x_large_margin"
                android:src="@drawable/submit"/>


        </LinearLayout>
    </ScrollView>
</RelativeLayout>